package culture.africa.ci.factoryservicedemo;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class FactoryServiceDemoApplication {

    public static void main(String[] args) {
        SpringApplication.run(FactoryServiceDemoApplication.class, args);
    }

}
